style.css
@font-face {
    font-family: Roboto;
    src: url("fonts/Roboto-Regular.ttf");
}

* {
    margin: 0;
}

body{
    box-sizing: border-box;
    display: grid;
    grid-template-columns: 0.6fr 3fr;
    grid-template-rows: repeat(2, max-content);
    font-family: Roboto, sans-serif;
}

ul{
    list-style-type: none;
}

div{
    border: 1px solid black;
}

.header{
    display: grid;
    grid-template-rows: repeat(2, max-content);
    gap: 20px;
    grid-column: 2/-1;
    grid-row: 1/2;
    padding-right: 20px;
    padding-bottom: 15px;
    margin-top: 20px;
    box-shadow: 0 4px 2px -2px gray;
    z-index: 2;
}

.header , .header div{
    border: none;
}

.header-first{
    display: grid;
    grid-template-columns: 2fr 1fr;
    /* grid-template-columns: repeat(2, max-content); */
    gap: 80px; 
}

.header-second{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 100px;
}

.notifications-container, .upload-share-container ul{
    display: grid;
    grid-template-columns: repeat(3, max-content);
    align-items: center;
    gap: 30px;
}


.upload-share-container ul{
    height: 100%;
}

.upload-share-container button{
    border: none;
    background-color: #1992d4;
    border-radius: 40px;
    color: white;
    padding: 10px 40px;
    font-weight: bold;
}

.notifications-container h6{
    font-size: 15px;
}

.greeting-container{
    display: grid;
    grid-template-columns: repeat(2, max-content);
    align-items: center;
    padding-left: 50px;
    gap: 20px;
}

.greeting-container h4{
    font-size: 25px;
}

.sidebar{
    display: grid;
    grid-template-rows: repeat(3, min-content);
    gap: 60px;
    grid-row: 1/-1;
    grid-column: 1/2;
    background-color: #1992d4;
    color: white;
    font-weight: bold;
    padding: 10px 60px 10px 20px;
}

.sidebar, .sidebar div{
    border: none;
}

.dashboard-container, .param-container{
    display: grid;
    grid-template-columns: repeat(2, min-content);
    gap: 10px;
    align-items: center;
}

.param-container{
    padding-left: 20px;
    gap: 20px 30px;
}

.dashboard-container{
    font-size: 20px;
}

.project-container{
    display: grid;
    grid-template-columns: 1.5fr 70fr;
}

.project{
    display: grid;
    grid-template-rows: repeat(2, 1fr);
}

.project ul{
    display: grid;
    grid-template-columns: repeat(3, min-content);
    gap: 20px;
    align-items: end;
    justify-content: end;
    margin: 0 30px 40px 0;
}


.projects{
    display: grid;
    grid-template-rows: min-content 200px;
    grid-auto-rows: 200px;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 30px;
    grid-column: 1/2;
    grid-row: 1/-1;
}

.projects > h5{
    grid-column: 1/-1;
    grid-row: 1/2;
}

.announcements-container{
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    gap: 30px;
}

.trend{
    display: grid;
    grid-template-columns: repeat(2, max-content);
}

.trends-container{
    display: grid;
    grid-template-rows: repeat(4, 1fr);
    gap: 30px;
}

.announcements{
    display: grid;
    grid-template-rows: min-content 1fr;
    gap: 10px;
}

.main{
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: repeat(2, 1fr);
    row-gap: 40px;
    column-gap: 20px;
    grid-column: 2/-1;
    grid-row: 2/-1;
    padding: 40px 30px 80px 20px;
    background-color: #e2e8f0;
    z-index: 1;
}

.main, .main *{
    border: none;
}

.main h5{
    font-size: 18px;
}

.projects > h5{
    margin-bottom: -20px;
}

.trends > h5{
    margin-bottom: 15px;
}

.yellow-stripe-container{
    background-color: #f0b429;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}

input[type="search"]{
    background-color: #e2e8f0;
    border: none;
    border-radius: 40px;
    height: 30px;
    padding-left: 20px;
    padding-right: 20px;
}

.searchbar-container{
    display: grid;
    grid-template-columns: min-content minmax(90%, 600px);
    gap: 15px;
    align-items: center;
    padding-left: 50px;
}

.project, .trends-container, .announcements-container{
    background-color: white;
    box-shadow: 0 5px 10px -5px gray,
                5px 0 10px -5px gray;

}
.trends-container, .announcements-container{
    border-radius: 10px;
}

.project{
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}

.project h6{
    font-size: 16px;
}

.project p{
    color: gray;
    font-size: 14px;
}

.project-content{
    padding: 30px 5px 0 20px;
}

